# Maximum_Volume_Inscribed_Ellipsoid

./: CMakeLists.txt  example_polytope.txt  inscribed_ellipsoid_test.cc
